fixed styling error on mobile version of the website

--- a/src/App.scss
+++ b/src/App.scss
@@ -389,6 +389,10 @@ body::-webkit-scrollbar-track-piece
 
 .gallery__direction {
   flex-direction: row;
+
+  @media screen and (max-width: 1151px) {
+    flex-direction: column ;
+  }
 }
 
 @media screen and (min-width: 1151px) {
